--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
       "name": "Our Love Anniversary",
-      "short_name": "thoonsuthi",
+      "short_name": "Thoonsuthi",
       "description": "This app is to celebrate each and everyday of me and my girl that we're being together rightnow and to the forever.",
       "start_url": "https://github.com/thoonsuthi/anniversary/index.html",
       "display": "standalone",
