--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
       "name": "Our Love Anniversary",
       "short_name": "Thoonsuthi",
       "description": "This app is to celebrate each and everyday of me and my girl that we're being together rightnow and to the forever.",
-      "start_url": "https://github.com/thoonsuthi/anniversary/index.html",
+      "start_url": "index.html",
       "display": "standalone",
       "background_color": "#ffffff",
       "theme_color": "#000000",
       "icons": [
             {
-                  "src": "https://github.com/thoonsuthi/anniversary/favicons/webapp.png",
+                  "src": "favicons/webapp.png",
                   "sizes": "192x192",
                   "type": "image/png"
             }
