--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,16 @@
       "background_color": "#ffffff",
       "theme_color": "#000000",
       "icons": [
-            {
-                  "src": "favicons/webapp.png",
-                  "sizes": "192x192",
-                  "type": "image/png"
-            }
+          {
+        "src": "favicons/webapp.png",
+        "sizes": "192x192",
+        "type": "image/png"
+          },
+          {
+        "src": "favicons/webapp512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+          }
       ]
+
 }
